# safe_run

./: .gitignore  AGENTS.md  Cargo.toml  DRAFT.md  M0_CHECKLIST.md  M1_CHECKLIST.md  M2_STAGE_PLAN.md  M3_STAGE_PLAN.md  README.md  TODO.md
crates/sr-cli/: Cargo.toml
crates/sr-cli/src/: main.rs
crates/sr-common/: Cargo.toml
crates/sr-compiler/: Cargo.toml
crates/sr-evidence/: Cargo.toml
crates/sr-policy/: Cargo.toml
crates/sr-runner/: Cargo.toml
crates/sr-runner/src/: cleanup.rs  constants.rs  event.rs  launch.rs  lib.rs  model.rs  monitor.rs  mount_executor.rs  network_lifecycle.rs  prepare.rs  rollback.rs  runner.rs  utils.rs
crates/sr-runner/tests/: network_lifecycle.rs  network_real_world.rs  report_schema_v1.rs  run_failure_paths.rs  run_smoke.rs
crates/sr-runner/tests/common/: mod.rs
examples/: m1_network_none.yaml  m1_readonly_root.yaml  m1_resource_limits.yaml  m2_mount_readonly.yaml
plan/: ENGINEERING_CONVENTIONS.md  INTERFACE_BASELINE.md  OVERVIEW.md
plan/M0/: ARCHITECTURE.md  INTERFACES.md  MODULES.md  OVERVIEW.md  REFERENCES.md
plan/M1/: ARCHITECTURE.md  INTERFACES.md  MODULES.md  OVERVIEW.md  REFERENCES.md
plan/M2/: ARCHITECTURE.md  INTERFACES.md  MODULES.md  MOUNT_CLARIFICATIONS.md  OVERVIEW.md  REFERENCES.md
plan/M3/: ARCHITECTURE.md  INTERFACES.md  MODULES.md  NETWORK_CLARIFICATIONS.md  OVERVIEW.md  REFERENCES.md
plan/M4/: ARCHITECTURE.md  INTERFACES.md  MODULES.md  OVERVIEW.md  REFERENCES.md
scripts/: get_firecracker.sh  get_rootfs.sh  network_allowlist_acceptance.sh
tests/archive_integrity/: README.md
(+44 files in other folders)
