[workspace]
members = [
  "crates/sr-common",
  "crates/sr-policy",
  "crates/sr-compiler",
  "crates/sr-runner",
  "crates/sr-evidence",
  "crates/sr-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
