[package]
name = "sr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "safe-run"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
sr-common = { path = "../sr-common" }
sr-policy = { path = "../sr-policy" }
sr-compiler = { path = "../sr-compiler" }
sr-evidence = { path = "../sr-evidence" }
sr-runner = { path = "../sr-runner" }
